2001-10-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Geometry.cpp (Geometry): Add constructor from
 	MagickLib::RectangleInfo.

	* lib/Image.cpp (boundingBox): Method to return smallest bounding
 	box enclosing non-border pixels.

2001-10-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (getConstIndexes): Add method to obtain read-only
 	pixel indexes.
	(getIndexes): Add method to obtain read-write pixel indexes.
	(Image::Image): Send warnings from Image constructor to cerr
 	rather than throwing.

	* lib/Color.cpp (Color(PixelPacket&)): Change argument to const
 	PixelPacket& as it should have been from the beginning.

	* lib/Image.cpp (pixelColor): Reimplemented to be a const method.

2001-10-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (getConstPixels): New method for returning a
 	read-only pixel view.  Still requires documentation.

	* lib/Magick++/STL.h (coderInfoList): Fixed compilation problem
 	when compiling with Visual C++.

2001-10-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/Color.h (scaleQuantumToDouble): Add polymorphic
 	version that accepts double to avoid downconversion error.

2001-10-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/Color.h (scaleQuantumToDouble): Cast Quantum to
 	double prior to division.  Hopefully fix bug.

2001-10-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/Color.h (Color(const std::string)): Pass argument by reference.
	* (operator=): Pass argument by const reference.
	
2001-09-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/STL.h (coderInfoList): New function to support
 	obtaining format coder information (as a list of type CoderInfo).

	* lib/CoderInfo.cpp (CoderInfo): New class to support obtaining
 	format coder information.

2001-09-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (depth): Use GetImageDepth and SetImageDepth